--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -15,3 +15,13 @@ body {
   width: 100vw;
   background-color: #0c0c0d;
 }
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
