--- a/frontend/src/screens/play/play.css
+++ b/frontend/src/screens/play/play.css
@@ -27,6 +27,7 @@
     display: grid;
     place-content: center;
     font-family: "Roadrage";
+    cursor: pointer;
 
 }
 
@@ -45,6 +46,7 @@
     -webkit-backdrop-filter: blur(20px);
     color: white;
     border: 1px solid rgba(255, 255, 255, 0.18);
+    cursor: pointer;
 }
 
 #square {
@@ -66,4 +68,19 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
+}
+.timerContainer{
+    height: 40px;
+    font-size: 20px;
+    font-family: "Roadrage";
+}
+
+#Oturn{
+    color: #e60073;
+        text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
+}
+
+#Xturn{
+color: #3f56c9;
+    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #80deea, 0 0 40px #80deea, 0 0 50px #80deea, 0 0 60px #80deea, 0 0 70px #80deea;
 }
