--- a/frontend/src/screens/user-create/usercreate.css
+++ b/frontend/src/screens/user-create/usercreate.css
@@ -22,6 +22,7 @@
   -webkit-backdrop-filter: blur(20px);
   color: white;
   border-radius: 5px;
+    border: none;
 }
 .btnHolder {
   height: 60px;
@@ -36,4 +37,6 @@
   -webkit-backdrop-filter: blur(20px);
   color: white;
   border-radius: 5px;
+  cursor: pointer;
+  border: none;
 }
